fix: swagger user role bug fix
