# models/user.go
@@ -25,11 +25,11 @@ type User struct {
 }
 
 type UserResponse struct {
-	ID        uint      `json:"id"`
-	Name      string    `json:"name"`
-	Email     string    `json:"email"`
-	RoleID    uint      `json:"role_id"`
-	Role      Role      `json:"role"`
-	CreatedAt time.Time `json:"created_at"`
-	UpdatedAt time.Time `json:"updated_at"`
+	ID        uint         `json:"id"`
+	Name      string       `json:"name"`
+	Email     string       `json:"email"`
+	RoleID    uint         `json:"role_id"`
+	Role      RoleResponse `json:"role"`
+	CreatedAt time.Time    `json:"created_at"`
+	UpdatedAt time.Time    `json:"updated_at"`
 }
